kube/taskmanager-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: taskmgr
  name: taskmgr
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: taskmgr
  template:
    metadata:
      labels:
        app: taskmgr
    spec:
      containers:
        - image: localhost:5000/taskmanager:1.1
          imagePullPolicy: Always
          name: taskmanager
          ports:
            - containerPort: 3000
              protocol: TCP
